<resources>
    <!-- Global -->
    <string name="app_name">Cube Timer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="archive_solves_file">archivedSolves</string>

    <!-- Navigation Drawer -->
    <string name="nav_timer">Timer</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_reference">Reference</string>
    <string name="nav_export">Export</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>

    <!-- Timer Fragment -->
    <string name="swipe_up_for_solves">Swipe up for session solves</string>
    <string name="archive_session">Archive session</string>
    <string name="no_data_available">--</string>
    <string name="scramble_text">R U R\' U\' R\' F R2 U\' R\' U\' R U R\' F\'</string>
    <string name="touch_to_start">Touch screen to start</string>
    <string name="session_best">Session best:</string>
    <string name="session_Ao5">Current Ao5:</string>
    <string name="session_Ao12">Current Ao12:</string>
    <string name="session_mean">Current mean:</string>
    <string name="release_to_start">Release to start timer</string>
    <string name="timing">Timing</string>

    <!-- Statistics Fragment -->
    <string name="swipe_up_alltime_solves">Swipe up for all solves</string>
    <string name="alltime_best">Best:</string>
    <string name="alltime_Ao5">Best Ao5:</string>
    <string name="alltime_Ao12">Best Ao12:</string>
    <string name="alltime_mean">Mean:</string>
</resources>
