<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timer"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/nav_timer" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_statistics" />
        <item
            android:id="@+id/nav_reference"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_reference" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_export" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
        </menu>
    </item>

</menu>
